--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                 <div>
                   <p class="label-lg">Mail</p>
 
-                  <a href="#" class="body-lg">atharvnikam23@gmail.com</a>
+                  <a href="mailto:atharvnikam23@gmail.com" class="body-lg">atharvnikam23@gmail.com</a>
                 </div>
 
               </li>
